# semicon-alpha

./: .env.example  .gitignore  PHASE_2_INTELLIGENCE_TERMINAL_SPEC.md  README.md  pyproject.toml  zervehack_semiconductor_project_plan.md
configs/: benchmarks.yaml  event_taxonomy.yaml  graph_schema.yaml  ontology_nodes.yaml  relationship_edges.yaml  scoring_rules.yaml  theme_nodes.yaml  universe.yaml
data/: app_state.sqlite
data/processed/: benchmark_prices_daily.parquet  company_registry.parquet  company_relationships.parquet  exchange_symbols.parquet  lithos_snapshots.parquet  market_prices_daily.parquet  news_article_observations.parquet  news_articles_discovered.parquet  news_articles_enriched.parquet  news_source_registry.parquet  theme_nodes.parquet  theme_relationships.parquet
docs/: DATA_INGESTION.md  EVENT_INTELLIGENCE.md  GRAPH_INFLUENCE_IMPLEMENTATION_PLAN.md  LLM_INTELLIGENCE_IMPLEMENTATION_PLAN.md  PHASE_2_TERMINAL_IMPLEMENTATION_PLAN.md  ZERVE_SETUP.md
notebooks/: 00_bootstrap.py  01_news_ingestion.py  02_reference_sync.py  03_market_sync.py  04_workspace_summary.py  README.md
src/semicon_alpha/: cli.py  (+3 more)
tests/: test_api_wave1.py  test_duckdb_catalog.py  test_eodhd.py  test_eodhd_resilience.py  test_event_intelligence.py  test_fmp.py  test_fmp_resilience.py  test_graph_layer.py  test_lithos.py  test_llm_wave0_wave1.py  test_llm_wave2_wave3.py  test_llm_wave4.py  test_reference.py  test_scoring_evaluation.py  test_settings.py  test_source_enrichment.py  test_wave2_wave3_api.py  test_wave4_scenarios_theses_api.py  test_wave5_ontology_retrieval.py
(+135 files in other folders)
