[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semicon-alpha"
version = "0.1.0"
description = "Data ingestion foundation for the semiconductor news propagation engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.1",
  "fastapi>=0.115",
  "httpx>=0.27",
  "lxml>=5.0",
  "networkx>=3.3",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
semicon-alpha = "semicon_alpha.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
